Fix style glitches in mobile / human brains
- The logo was "cut off" per most viewers.  Fixed.
- Mobile <400px had bad horizontal scrolling
- pre+code blocks were overflowing

--- a/htdocs/site.css
+++ b/htdocs/site.css
@@ -108,15 +108,8 @@ div.hero h2 {
   font-weight: bold;
   margin-bottom: 24px; }
 
-div.hero button {
-  background-color: #0071bc;
-  color: #fff;
-  font-weight: bold;
-  font-size: 24px;
-  border-radius: 12px;
-  padding: 12px;
-  border: none;
-  cursor: pointer; }
+div.hero a.button {
+  box-shadow: none; }
 
 div.band-x3 {
   height: 30vh;
@@ -312,6 +305,7 @@ div.cta button {
 
 .content > div pre code {
   display: block;
+  overflow: auto;
   margin: 2em 0 2em -2em;
   padding: 1em;
   font-size: 70%;
@@ -477,7 +471,15 @@ footer .copyright {
   footer .g {
     flex-direction: column; }
   footer .g > .x3 {
-    width: 100%; } }
+    width: 100%; }
+  footer nav li::marker {
+    padding-right: 2px; } }
+
+@media only screen and (max-width: 400px) {
+  div.hero h1 {
+    font-size: 80px; }
+  div.hero h2 {
+    font-size: 24px; } }
 
 .content.downloads > div:nth-child(2) h3 {
   border-bottom: none; }
